<resources>
    <string name="app_name">Smart Recorder</string>

    <!-- Account Section in Setting Frag -->
    <string name="sign_in_section_text">Account</string>
    <string name="sign_in_account_text">Signed In As: </string>
    <string name="sign_out">Sign Out</string>


    <!-- Recording Section in Setting Frag -->
    <string name="recording_section_text">Recording</string>
    <string name="recording_length_text">Single Recording length:</string>
    <string name="auto_recording_text">Loop Recording</string>
    <string name="recording_length_key">RECORDING LENGTH KEY</string>
    <string name="auto_record">AUTO RECORDING KEY</string>
    <string name="is_recording_key">IS RECORDING KEY</string>

    <!-- Saving Section in Setting Frag -->
    <string name="saving_section_text">Saving</string>
    <string name="shake_save_text">Shake To Save Recording</string>
    <string name="shake_to_save">SHAKE SAVE KEY</string>
    <string name="auto_upload_key">AUTO UPLOAD KEY</string>
    <string name="auto_delete_key">AUTO DELETE KEY</string>
    <string name="auto_delete_freq_key">AUTO DELETE FREQ KEY</string>


    <!-- Authentication Section in Setting Frag -->
    <string name="bio_auth_section_text">Authentication</string>
    <string name="biometric_authentication">BIOMETRIC AUTHENTICATION KEY</string>

    <!-- Authentication Section in Setting Frag -->
    <string name="guide_section_text">Guides</string>
    <string name="guidance_on_off">GUIDANCE KEY</string>


    <string name="click_to_start">Click to Start Recording</string>
    <string name="click_to_pause">Click to Pause Recording</string>


    <!-- Menu items in multiple selection fragments -->
    <string name="menu_upload">Upload</string>
    <string name="menu_download">Download</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_selectall">Select All</string>
    <string name="menu_deselectall">Deselect All</string>

    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">606946566326-ald71c4sljtisqj9v6jgkvr0pna4idui.apps.googleusercontent.com</string>

    <!-- Application Tour Sequence -->
    <string name="Home_Recorder_Title">This is the Recorder button</string>
    <string name="Home_Recorder_Description">Click the button Once it will start recording,
        Click the recording button a second time to end the recording!!!</string>

    <string name="Home_SignStatus_Title">Here shows your Sign-In Status</string>
    <string name="Home_SignStatus_description">This is your account</string>


    <string name="Setting_Account">This is your account</string>
    <string name="Setting_Record">Here to change your record settings</string>
    <string name="Setting_Saving">Here to change your autosaving setting</string>
    <string name="Setting_BioAuthTex">You can enable or disable your biometric authentication here</string>

    <string name="Record_List_Back">This will take you to the last page</string>


    <string name="tutorial_text">   To use our product you can simply click the button on
                                    the main page or shake your phone to start the recorder.
                                    \n \n Our product provides the auto upload feature if you login to your google account.
                                    Your recording will automatically upload to the cloud and the local files will be deleted on your demand to save your storage space.
    \n</string>
</resources>
