<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/upload"
        android:icon="@drawable/upload"
        android:title="@string/menu_upload" />
    <item
        android:id="@+id/download"
        android:icon="@drawable/download"
        android:title="@string/menu_download" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/delete"
        android:title="@string/menu_delete" />

    <item
        android:id="@+id/selectall"
        android:icon="@drawable/selectall"
        android:title="@string/menu_selectall" />

    <item
        android:id="@+id/deselectall"
        android:icon="@drawable/deselectall"
        android:title="@string/menu_deselectall" />

</menu>